<resources>
    <string name="app_name">Compass</string>

    <string name="action_settings">Settings</string>

    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="author">Author</string>
    <string name="themes">Appearance</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="image_view">image_view</string>

    <string name="app_name_text">
        Convenient navigation app for Android. You can use it to\n
        determine the exact coordinates of your current location,\n
        find the directions of the cardinal directions. It will become\n
        an indispensable assistant for travel lovers. You need to\n
        add more text, so that if possible there is no empty space \n
    </string>

    <string name="one_text">Does not have annoying ads;</string>
    <string name="two_text">The app does not require Internet access;</string>
    <string name="free_text">Does not require manual configuration;</string>
    <string name="fore_text">automatic calibration;</string>
    <string name="five_text">Works on both landscape and portrait orientation;</string>
    <string name="six_text">Completely free;</string>
    <string name="seven_text">Not supported by every device;</string>

    <string name="share">Share</string>
    <string name="text_logo">COMPASS</string>
    <string name="version_1_0">версия 1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_header">Navigation header</string>
    <string name="COMPASS">COMPASS</string>
    <string name="avi26_mail_ru">avi26@mail.ru</string>
    <string name="home">Домой</string>


</resources>
