<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CompassActivityOne">
    <item
        android:id="@+id/menu_about_app"
        android:orderInCategory="1"
        android:title="@string/about_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about_author"
        android:orderInCategory="2"
        android:title="@string/author"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_theme_activity"
        android:orderInCategory="4"
        android:title="@string/times"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:orderInCategory="5"
        android:title="@string/share"
        app:showAsAction="never" />


</menu>
