<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/id_Calibrate_navigation"
            android:icon="@drawable/vector_near"
            android:title="Калибровать приложение " />
        <item
            android:id="@+id/id_autor_navigation"
            android:icon="@drawable/vector_star"
            android:title="@string/author" />
        <item
            android:id="@+id/id_id_about_app_navigation"
            android:icon="@drawable/vector_phone"
            android:title="@string/about_app" />
        <item
            android:id="@+id/id_setting_navigation"
            android:icon="@drawable/vector_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/id_themes_navigation"
            android:icon="@drawable/vector_theme_palette"
            android:title="@string/themes" />

    </group>

    <item android:title="Profile2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/vector_star"
                    android:title="Пункт 1" />
                <item
                    android:icon="@drawable/vector_star"
                    android:title="Пункт 2" />
                <item
                    android:icon="@drawable/vector_star"
                    android:title="Пункт 3" />
            </group>
        </menu>
    </item>


    <item android:title="NewProgile1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/vector_star"
                    android:title="Пункт новый 1" />
                <item
                    android:icon="@drawable/vector_star"
                    android:title="Пункт новый 2" />

            </group>
        </menu>
    </item>
</menu>